overlays/full-security/gatekeeper-policies/constraints/no-serviceaccount-token.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoServiceAccountToken
metadata:
  name: no-serviceaccount-token
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
