overlays/full-security/gatekeeper-policies/constraints/require-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: K8sRequiredResources
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
